add favicon in head

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>EverydayStudyApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= favicon_link_tag('favicon.ico') %>
 
     <%# metaタグスマホサイズに対応させる %>
     <meta content="width=device-width, initial=1.0" name="viewport"/>
